--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Bac Countdown - Track Your Algerian School Exam Countdown">
+    <meta name="description" content="A countdown tool specifically designed for Algerian students preparing for the Bac exams. Stay organized and focused with Bac Countdown.">
+    <meta name="keywords" content="Bac, countdown, باك, Algerian school exam, Algeria, Alger, study, exam preparation, track countdown, education, academic, timetable, schedule, deadline, planner, student tool, time management, exam stress, study guide, study aid">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="author" content="Untitled Master">
+
     <!-- Include Font Awesome stylesheet -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-lKuwC6U4tqU4UOWOsB8b9+9EhVvByEDCF1Z7Jy9gY4FfkcAA6GrfP8Xp8fO6I/pG" crossorigin="anonymous">
     
